--- a/server/package.json
+++ b/server/package.json
@@ -13,15 +13,16 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "local-storage": "^2.0.0",
     "morgan": "^1.10.0",
+    "ngrok": "^4.3.0",
     "nodemon": "^2.0.15",
-    "pg": "^8.7.1",
-    "sequelize": "^6.12.0-beta.1",
-    "stripe": "^8.203.0"
+    "pg": "^8.7.3",
+    "sequelize": "^6.16.2",
+    "stripe": "^8.131.1"
   }
 }
